--- a/first-angular-app/src/app/app.component.html
+++ b/first-angular-app/src/app/app.component.html
@@ -2,24 +2,18 @@
 
 <main>
     <ul id="users">
+        @for (user of users; track user.id) {
         <li>
-            <app-user [user]="users[0]"
-                (select)="onSelectUser($event)"></app-user>
+            <app-user [user]="user" (select)="onSelectUser($event)"></app-user>
         </li>
-        <li>
-            <app-user [user]="users[1]"
-                (select)="onSelectUser($event)"></app-user>
-        </li>
-        <li>
-            <app-user [user]="users[2]"
-                (select)="onSelectUser($event)"></app-user>
-        </li>
-        <li>
-            <app-user [user]="users[3]"
-                (select)="onSelectUser($event)"></app-user>
-        </li>
+        }
     </ul>
 
-    <app-tasks [name]="selectedUser ? selectedUser.name : ''"></app-tasks>
+    @if (selectedUser) {
+    <app-tasks [name]="selectedUser.name"></app-tasks>
+    } @else {
+        <p id="fallback">Select a user to see their tasks!</p>
+    }
+
 
 </main>
