--- a/01-starting-project/src/app/investment-results/investment-results.component.html
+++ b/01-starting-project/src/app/investment-results/investment-results.component.html
@@ -14,13 +14,13 @@
     </thead>
     <tbody>
         @for (result of results; track result.year) {
-            <tr>
-                <td>{{ result.year }}</td>
-                <td>{{ result.valueEndOfYear }}</td>
-                <td>{{ result.interest }}</td>
-                <td>{{ result.totalInterest }}</td>
-                <td>{{ result.totalAmountInvested }}</td>
-            </tr>
+        <tr>
+            <td>{{ result.year }}</td>
+            <td>{{ result.valueEndOfYear | currency }}</td>
+            <td>{{ result.interest | currency }}</td>
+            <td>{{ result.totalInterest | currency}}</td>
+            <td>{{ result.totalAmountInvested | currency }}</td>
+        </tr>
         }
     </tbody>
 </table>
