--- a/02-starting-project/src/app/header/header.component.html
+++ b/02-starting-project/src/app/header/header.component.html
@@ -1,27 +1,19 @@
 <header>
-    <div id="logo">
-      <img src="logo.png" alt="Website logo, a server" />
-    </div>
-  
-    <nav>
-      <ul>
-        <li>
-          <a href="/">Home</a>
-        </li>
-        <li>
-          <a href="/">Management</a>
-        </li>
-        <li>
-          <button>
-            <span>
-              Logout
-            </span>
-            <span class="icon">
-              →
-            </span>
-          </button>
-        </li>
-      </ul>
-    </nav>
-  </header>
-  
+  <div id="logo">
+    <img src="logo.png" alt="Website logo, a server" />
+  </div>
+
+  <nav>
+    <ul>
+      <li>
+        <a href="/">Home</a>
+      </li>
+      <li>
+        <a href="/">Management</a>
+      </li>
+      <li>
+        <app-button></app-button>
+      </li>
+    </ul>
+  </nav>
+</header>
