--- a/02-starting-project/src/app/dashboard/tickets/new-ticket/new-ticket.component.html
+++ b/02-starting-project/src/app/dashboard/tickets/new-ticket/new-ticket.component.html
@@ -8,13 +8,10 @@
         <textarea type="request" id="request" rows="3"></textarea>
     </p>
     <p>
-        <button>
-            <span>
-                Submit
-            </span>
-            <span class="icon">
-                ⌲
-            </span>
+        <button appButton>
+            Submit 
+            <span ngProjectAs="icon">⌲</span>
+          
         </button>
     </p>
 </form>
