--- a/02-starting-project/src/app/header/header.component.html
+++ b/02-starting-project/src/app/header/header.component.html
@@ -12,7 +12,10 @@
         <a href="/">Management</a>
       </li>
       <li>
-        <app-button></app-button>
+        <button appButton>
+          Submit 
+          <span ngProjectAs="icon">→</span>
+        </button>
       </li>
     </ul>
   </nav>
