--- a/02-starting-project/src/app/shared/button/button.component.html
+++ b/02-starting-project/src/app/shared/button/button.component.html
@@ -1,8 +1,6 @@
-<button>
-    <span>
-      Logout
-    </span>
+
+    <span> <ng-content /> </span>
     <span class="icon">
-      →
+        <ng-content select="icon"/>
     </span>
-  </button>
+  
