--- a/02-starting-project/src/app/dashboard/tickets/new-ticket/new-ticket.component.html
+++ b/02-starting-project/src/app/dashboard/tickets/new-ticket/new-ticket.component.html
@@ -1,12 +1,10 @@
-<form action="">
-    <p>
-        <label>Title</label>
+<form>
+    <app-control label="Title">
         <input type="title" id="title" />
-    </p>
-    <p>
-        <label>Request</label>
+    </app-control>
+    <app-control label="Request">
         <textarea type="request" id="request" rows="3"></textarea>
-    </p>
+    </app-control>
     <p>
         <button appButton>
             Submit 
