--- a/02-starting-project/src/app/dashboard/tickets/new-ticket/new-ticket.component.html
+++ b/02-starting-project/src/app/dashboard/tickets/new-ticket/new-ticket.component.html
@@ -1,9 +1,9 @@
-<form>
+<form (ngSubmit)="onSubmit(titleInput.value, textInput.value)">
     <app-control label="Title">
-        <input type="title" id="title" />
+        <input type="title" id="title" #titleInput/>
     </app-control>
     <app-control label="Request">
-        <textarea type="request" id="request" rows="3"></textarea>
+        <textarea type="request" id="request" rows="3" #textInput></textarea>
     </app-control>
     <p>
         <button appButton>
