--- a/02-starting-project/src/app/dashboard/tickets/tickets.component.html
+++ b/02-starting-project/src/app/dashboard/tickets/tickets.component.html
@@ -2,7 +2,7 @@
   <ul>
     @for (ticket of tickets; track ticket.id) {
       <li>
-        <app-ticket></app-ticket>
+        <app-ticket [data]="ticket"></app-ticket>
       </li>
     } @empty {
       <p>No tickets available.</p>
