--- a/02-starting-project/src/app/dashboard/tickets/new-ticket/new-ticket.component.html
+++ b/02-starting-project/src/app/dashboard/tickets/new-ticket/new-ticket.component.html
@@ -1,9 +1,9 @@
-<form (ngSubmit)="onSubmit(titleInput.value, textInput.value)" #form #input>
+<form (ngSubmit)="onSubmit()" #form #input>
     <app-control label="Title">
-        <input type="title" id="title" #titleInput/>
+        <input name="title" id="title" #input [(ngModel)]="enteredTitle" />
     </app-control>
     <app-control label="Request">
-        <textarea type="request" id="request" rows="3" #textInput #input></textarea>
+        <textarea name="request" id="request" rows="3" #input [(ngModel)]="enteredText"></textarea>
     </app-control>
     <p>
         <button appButton>
