--- a/09-starting-project/src/app/auth/login/login.component.html
+++ b/09-starting-project/src/app/auth/login/login.component.html
@@ -14,6 +14,13 @@
 
     <button class="button">Login</button>
   </div>
+
+  @if (emailIsInvalid) {
+    <p class="control-error">Please enter a valid email address.</p>
+  }
+  @if (passwordIsInvalid) {
+    <p class="control-error">Please enter a valid password (at least 6 characters long and contain a question mark).</p>
+  }
 </form>
 
 <!-- <form #form="ngForm" (ngSubmit)="onSubmit(form)">
